# tree-sitter-mor

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-mor.h  tree-sitter-mor.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mor/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMorTests/: TreeSitterMorTests.swift
examples/: conditions.mo  funcs.mo  loops.mo
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
